service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-service
spec:
  type: ClusterIP
  selector:
    app: nginx-https
  ports:
    - port: 80
      targetPort: 80
