ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-https-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myapp.local
      secretName: nginx-https-tls
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-https-service
                port:
                  number: 80
